基本完成数据库数据加载

--- a/xBaseDatas/xBaseDatas.vcxproj
+++ b/xBaseDatas/xBaseDatas.vcxproj
@@ -14,12 +14,13 @@
     <ProjectGuid>{85FA76C9-1933-486F-8D8A-AB7269D1F58B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>xBaseDatas</RootNamespace>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v141_xp</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
