完成目标与跟随账号的信息拆分

--- a/xEFPlugin/xEFPlugin.vcxproj
+++ b/xEFPlugin/xEFPlugin.vcxproj
@@ -85,12 +85,14 @@
     <ClInclude Include="FTradeApi.h" />
     <ClInclude Include="FTradeSpi.h" />
     <ClInclude Include="Include\ThostFtdcTraderApi.h" />
+    <ClInclude Include="QueryTask.h" />
     <ClInclude Include="TTradeApi.h" />
     <ClInclude Include="TTradeSpi.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FTradeApi.cpp" />
     <ClCompile Include="FTradeSpi.cpp" />
+    <ClCompile Include="QueryTask.cpp" />
     <ClCompile Include="TTradeApi.cpp" />
     <ClCompile Include="TTradeSpi.cpp" />
   </ItemGroup>
