--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@
 /xBaseDatas/Debug
 /xEFPlugin/Debug
 xFollow.rar
+/JsonCPP/makefiles/vs71/Debug
+/xEFMarketPlugin/Debug
+/xFollow/res/xFollow1.ico
+/xFollow/res/xFollow.png
+/UpgradeLog.htm
