--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ xFollow.rar
 /xFollow/res/xFollow1.ico
 /xFollow/res/xFollow.png
 /UpgradeLog.htm
+/Fossa1
+/Fossa/Debug
+/ConsoleApplication1/Debug
